[package]
name = "ohso"
version = "0.1.0"
authors = ["Michael Greenberg <michael.greenberg@pomona.edu>"]
edition = "2018"
description = "An implementation of the Hughes/Peyton Jones pretty printing library for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
